# ETL

./: .dockerignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: etl_build_push.yaml
config/: .env.template
docker/es/: Dockerfile  genres.json  movies.json  persons.json  preload.sh
docker/etl/: Dockerfile  entrypoint.sh
postgres_to_es/: config.py  elastic_loader.py  main.py  models.py  postgres_extractor.py  query.py  state.py  technote.md
